<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Countdown to pension</string>
    <string name="header">Time remaining until well deserved pension:</string>
    <string name="days">%1$s, %2$s and %3$s</string>
    <string name="hours">%1$s, %2$s and %3$s</string>
    <string name="and">and</string>
    <string name="days_remaining"><big>0</big> years <big>0</big> months and <big>0</big> days</string>
    <string name="time_remaining"><big>0</big> hours <big>0</big> minutes and <big>0</big> seconds</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="user_data_input_title">To calculate your pension age, some basic info is needed</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="calculate">Calculate</string>
    <string name="resultAgeAndDate">Your age of pension is %1$s %2$sand date you are looking forward to is %3$te. %3$tB %3$tY</string>
    <string name="number_of_children_raised">Number of children raised</string>
    <string name="user_settings">User Settings</string>
    <string name="about_application">About application</string>
    <string name="preference_file_key" translatable="false">com.tomveselka.pensioncountdown.PREFERENCE_FILE_KEY</string>
    <string name="preference_file_gender" translatable="false">gender</string>
    <string name="preference_file_birthDate" translatable="false">birthDate</string>
    <string name="preference_file_numberOfChildren" translatable="false">numberOfChildren</string>
    <string name="preference_file_pensionAge" translatable="false">pensionAge</string>
    <string name="about_app_text">This application is designed to calculate users pension age and based on that and on his date of birth, to show him countdown, how long he has until he can go to pension</string>
    <string name="about_app_title">About application</string>
    <string name="reached_pension">You have already reached the age of pension. Enjoy</string>
    <plurals name="number_of_years">
        <item quantity="one"><big>%d</big> year</item>
        <item quantity="other"><big>%d</big> years</item>
    </plurals>
    <plurals name="number_of_months">
        <item quantity="one"><big>%d</big> month</item>
        <item quantity="other"><big>%d</big> months</item>
    </plurals>
    <plurals name="and_number_of_months">
        <item quantity="one">and %d month&#160;</item>
        <item quantity="other">and %d months&#160;</item>
    </plurals>
    <plurals name="number_of_days">
        <item quantity="one"><big>%d</big> day</item>
        <item quantity="other"><big>%d</big> days</item>
    </plurals>
    <plurals name="number_of_hours">
        <item quantity="one"><big>%d</big> hour</item>
        <item quantity="other"><big>%d</big> hours</item>
    </plurals>
    <plurals name="number_of_minutes">
        <item quantity="one"><big>%d</big> minute</item>
        <item quantity="other"><big>%d</big> minutes</item>
    </plurals>
    <plurals name="number_of_seconds">
        <item quantity="one"><big>%d</big> second</item>
        <item quantity="other"><big>%d</big> seconds</item>
    </plurals>

    <string-array name="number_of_children">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>