<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    tools:context=".UserDataInput">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/user_data_input_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/genderLabel"
        style="@style/user_info_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/genderRadioButtonMale"
            style="@style/radio_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/genderRadioButtonFemale"
            style="@style/radio_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
             />
    </RadioGroup>



    <TextView
        android:id="@+id/dateOfBirthLabel"
        style="@style/user_info_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/date_of_birth" />

    <EditText
        android:id="@+id/dateOfBirthInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:minHeight="55dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/numberOfChildrenLabel"
        style="@style/user_info_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/number_of_children_raised" />

    <Spinner
        android:id="@+id/numberOfChildrenSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/calculateButton"
        android:onClick="calculateButtonClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#EC2727"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/resultAgeAndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/resultAgeAndDate"
        android:textColor="#E8B335"
        android:textSize="18sp" />

</LinearLayout>