<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4763BA"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <include
        android:id="@+id/mainToolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/days_remaining"
        style="@style/days_amd_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/days_remaining" />

    <TextView
        android:id="@+id/and_between"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="15dp"
        android:text="@string/and"
        android:textAlignment="center"
        android:textColor="@color/text_date_time_orange"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/time_remaining"
        style="@style/days_amd_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_remaining" />

    <View
        android:id="@+id/separator_2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>